--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm ci --no-audit
+          npm ci
           npx playwright install --with-deps chromium
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
