--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -50,6 +50,7 @@
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.15",
     "winston": "^3.8.2",
+    "yargs": "^17.7.2",
     "zksync-web3": "0.15.4"
   },
   "devDependencies": {
@@ -59,6 +60,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/supertest": "^2.0.11",
+    "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint-config-prettier": "^8.3.0",
