fix: address transfer type migration

--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -28,7 +28,8 @@
     "migration:generate": "npm run typeorm migration:generate ./src/migrations/$npm_config_name -- -d ./src/typeorm.config.ts",
     "migration:create": "npm run typeorm migration:create ./src/migrations/$npm_config_name",
     "migration:run": "npm run typeorm migration:run -- -d ./src/typeorm.config.ts",
-    "migration:revert": "npm run typeorm migration:revert -- -d ./src/typeorm.config.ts"
+    "migration:revert": "npm run typeorm migration:revert -- -d ./src/typeorm.config.ts",
+    "migration-script:run": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register ./src/migrationScripts/{migrationFileName}.ts --runInBand"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
