--- a/packages/worker/.env.example
+++ b/packages/worker/.env.example
@@ -8,8 +8,8 @@ DATABASE_NAME=block-explorer
 DATABASE_CONNECTION_IDLE_TIMEOUT_MS=12000
 DATABASE_CONNECTION_POOL_SIZE=100
 
-# Used to execute expensive script migrations to migrate data without downtime
-# Do not enable it by default, script migrations are specific to zkSync hosted instanced and have to be executed in certain order and controlled manually
+# Used to execute expensive script migrations on background to migrate data without downtime.
+# Script migrations are specific to hosted instances and have to be executed at certain timeframes and controlled manually.
 ENABLE_SCRIPT_MIGRATIONS=false
 
 BLOCKCHAIN_RPC_URL=http://localhost:3050
