--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "lerna run start",
     "db:create": "lerna run db:create",
     "db:drop": "lerna run db:drop",
-    "hyperchain:configure": "ts-node scripts/setup-hyperchain-config"
+    "hyperchain:configure": "ts-node scripts/setup-hyperchain-config",
+    "basetoken": "ts-node scripts/base-token-data"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
