--- a/packages/app/.vscode/settings.json
+++ b/packages/app/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "i18n-ally.localesPaths": ["src/locales"],
-  "prettier.tabWidth": 4
+  "prettier.tabWidth": 4,
+  "i18n-ally.keystyle": "nested"
 }
