--- a/packages/app/src/configs/local.config.json
+++ b/packages/app/src/configs/local.config.json
@@ -12,7 +12,8 @@
       "maintenance": false,
       "name": "local",
       "published": true,
-      "rpcUrl": "http://localhost:3050"
+      "rpcUrl": "http://localhost:3050",
+      "baseTokenAddress": "0x000000000000000000000000000000000000800a"
     }
   ]
 }
