--- a/packages/app/src/configs/production.config.json
+++ b/packages/app/src/configs/production.config.json
@@ -14,7 +14,8 @@
       "maintenance": false,
       "name": "goerli",
       "published": true,
-      "rpcUrl": "https://testnet.era.zksync.dev"
+      "rpcUrl": "https://testnet.era.zksync.dev",
+      "baseTokenAddress": "0x000000000000000000000000000000000000800a"
     },
     {
       "apiUrl": "https://block-explorer-api.sepolia.zksync.dev",
@@ -30,7 +31,8 @@
       "maintenance": false,
       "name": "sepolia",
       "published": true,
-      "rpcUrl": "https://sepolia.era.zksync.dev"
+      "rpcUrl": "https://sepolia.era.zksync.dev",
+      "baseTokenAddress": "0x000000000000000000000000000000000000800a"
     },
     {
       "apiUrl": "https://block-explorer-api.mainnet.zksync.io",
@@ -47,7 +49,8 @@
       "name": "mainnet",
       "published": true,
       "rpcUrl": "https://mainnet.era.zksync.io",
-      "tokensMinLiquidity": 0
+      "tokensMinLiquidity": 0,
+      "baseTokenAddress": "0x000000000000000000000000000000000000800a"
     }
   ]
 }
