--- a/docker-compose-external.yaml
+++ b/docker-compose-external.yaml
@@ -1,4 +1,5 @@
 # Run the explorer in another service compared with node.
+# Run it with external db.
 services:
   app:
     build:
@@ -56,29 +57,4 @@ services:
     depends_on:
       - worker
     restart: unless-stopped
-
-  postgres:
-    image: "postgres:14"
-    logging:
-      driver: none
-    volumes:
-      - postgres:/var/lib/postgresql/data
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=block-explorer
-    expose:
-      - "5433" # Publishes 5433 to other containers but NOT to host machine
-    ports:
-      - "5433:5433"
-    command: -p 5433
-
-volumes:
-  geth:
-  postgres:
 
