--- a/packages/app/src/configs/staging.config.json
+++ b/packages/app/src/configs/staging.config.json
@@ -17,6 +17,21 @@
       "rpcUrl": "https://sepolia.era.zksync.dev"
     },
     {
+      "apiUrl": "https://block-explorer-api.stage.zksync.dev",
+      "verificationApiUrl": "https://z2-dev-api-explorer.zksync.dev",
+      "hostnames": [
+        "https://goerli-beta.staging-scan-v2.zksync.dev"
+      ],
+      "icon": "/images/icons/zksync-arrows.svg",
+      "l1ExplorerUrl": "https://goerli.etherscan.io",
+      "l2ChainId": 270,
+      "l2NetworkName": "Goerli (Stage2)",
+      "maintenance": false,
+      "name": "goerli-beta",
+      "published": true,
+      "rpcUrl": "https://z2-dev-api.zksync.dev"
+    },
+    {
       "apiUrl": "https://block-explorer-api.mainnet.zksync.io",
       "verificationApiUrl": "https://zksync2-mainnet-explorer.zksync.io",
       "bridgeUrl": "https://portal.zksync.io/bridge/?network=mainnet",
