--- a/.github/workflows/docs-test-deploy.yaml
+++ b/.github/workflows/docs-test-deploy.yaml
@@ -35,5 +35,5 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "gh-actions"
-          npm ci
+          npm i
           npm run deploy
