--- a/.github/workflows/docs-test-build.yaml
+++ b/.github/workflows/docs-test-build.yaml
@@ -19,8 +19,7 @@ jobs:
           node-version: 20
           cache: npm
       - name: Install dependencies
-        working-directory: ./packages/testing-docs
-        run: npm i
+        run: npm ci
       - name: Build website
         working-directory: ./packages/testing-docs
         run: npm run build
