--- a/.github/workflows/docs-test-deploy.yaml
+++ b/.github/workflows/docs-test-deploy.yaml
@@ -28,12 +28,14 @@ jobs:
       - uses: webfactory/ssh-agent@v0.5.0
         with:
           ssh-private-key: ${{ secrets.BE_TEST_DOCS_DEPLOY_KEY }}
+      - name: Install dependencies
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "gh-actions"
+          npm ci
       - name: Deploy to GitHub Pages
         working-directory: ./packages/testing-docs
         env:
           USE_SSH: true
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "gh-actions"
-          npm i
           npm run deploy
