test: run docs separately

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "test:e2e": "lerna run test:e2e",
     "dev": "lerna run dev",
     "build": "lerna run build",
+    "build:docs": "lerna run build:docs",
+    "start:docs": "lerna run start:docs",
+    "deploy:docs": "lerna run deploy:docs",
     "start": "lerna run start",
     "serve": "lerna run serve",
     "db:create": "lerna run db:create",
