--- a/.github/workflows/docs-test-build.yaml
+++ b/.github/workflows/docs-test-build.yaml
@@ -21,5 +21,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build website
-        run: npm run build
+        run: npm run build:docs
 
