--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,9 +14,11 @@
     "test": "TZ=UTC-3 vitest --environment jsdom",
     "test:ci": "TZ=UTC-3 vitest --environment jsdom --run --reporter=verbose --reporter=junit --outputFile.junit=./junit.xml",
     "test:e2e": "cucumber-js -t \"not @testnet\"",
+    "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook -s ./public"
+    "build-storybook": "build-storybook -s ./public",
+    "postinstall": "rm -rf ./node_modules/@types/react && rm -rf ../../node_modules/@types/react"
   },
   "prettier": "@matterlabs/prettier-config",
   "lint-staged": {
