--- a/.github/workflows/docs-test-deploy.yaml
+++ b/.github/workflows/docs-test-deploy.yaml
@@ -29,10 +29,11 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.BE_TEST_DOCS_DEPLOY_KEY }}
       - name: Deploy to GitHub Pages
+        working-directory: ./packages/testing-docs
         env:
           USE_SSH: true
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "gh-actions"
           npm ci
-          npm run deploy:docs
+          npm run deploy
