fix: l2ExplorerUrl value

--- a/packages/app/src/configs/production.config.json
+++ b/packages/app/src/configs/production.config.json
@@ -11,6 +11,7 @@
       "l1ExplorerUrl": "https://sepolia.etherscan.io",
       "l2ChainId": 300,
       "l2NetworkName": "zkSync Era Sepolia Testnet",
+      "l2ExplorerUrl": "https://sepolia.explorer.zksync.io/",
       "maintenance": false,
       "name": "sepolia",
       "published": true,
@@ -27,6 +28,7 @@
       "l1ExplorerUrl": "https://etherscan.io",
       "l2ChainId": 324,
       "l2NetworkName": "zkSync Era Mainnet",
+      "l2ExplorerUrl": "https://explorer.zksync.io/",
       "maintenance": false,
       "name": "mainnet",
       "published": true,
