--- a/.github/workflows/docs-test-deploy.yaml
+++ b/.github/workflows/docs-test-deploy.yaml
@@ -34,7 +34,7 @@ jobs:
         env:
           USE_SSH: true
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "gh-actions"
+#          git config --global user.email "actions@github.com"
+#          git config --global user.name "gh-actions"
           npm ci
           npm run deploy
