--- a/.github/workflows/docs-test-deploy.yaml
+++ b/.github/workflows/docs-test-deploy.yaml
@@ -29,10 +29,13 @@ jobs:
       - uses: webfactory/ssh-agent@v0.5.0
         with:
           ssh-private-key: ${{ secrets.BE_TEST_DOCS_DEPLOY_KEY }}
+      - name: Install dependencies
+        run: npm ci
       - name: Deploy to GitHub Pages
         working-directory: ./packages/testing-docs
         env:
           USE_SSH: true
         run: |
-          npm ci
+          git config --global user.email "actions@github.com"
+          git config --global user.name "gh-actions"
           npm run deploy
