--- a/.github/workflows/docs-test-deploy.yaml
+++ b/.github/workflows/docs-test-deploy.yaml
@@ -1,10 +1,11 @@
 name: Deploy to GitHub Pages
 
 on:
+  pull_request:
   push:
     branches:
       - main
-      - '[0-9]+.*'
+      - '[0-9]+.*
 
 permissions:
   contents: write
