test: skip in draft

--- a/.github/workflows/api-e2e.yml
+++ b/.github/workflows/api-e2e.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   runE2ETests:
+    if: github.event.pull_request.draft == false
     name: Run E2E tests
     timeout-minutes: 10
     runs-on: ubuntu-latest
