--- a/packages/app/src/configs/local.config.json
+++ b/packages/app/src/configs/local.config.json
@@ -3,9 +3,7 @@
     {
       "apiUrl": "http://localhost:3020",
       "bridgeUrl": "http://localhost:3000/bridge",
-      "hostnames": [
-        "localhost"
-      ],
+      "hostnames": ["localhost"],
       "icon": "/images/icons/zksync-arrows.svg",
       "l2ChainId": 270,
       "l2NetworkName": "Local",
