--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -15,7 +15,7 @@ DISABLE_EXTERNAL_API=false
 DATABASE_STATEMENT_TIMEOUT_MS=90000
 CONTRACT_VERIFICATION_API_URL=http://127.0.0.1:3070
 NETWORK_NAME=testnet-sepolia
-BASE_TOKEN_SYMBOL=wETH
+BASE_TOKEN_SYMBOL=ETH
 BASE_TOKEN_DECIMALS=18
 BASE_TOKEN_L1_ADDRESS=0x8E9C82509488eD471A83824d20Dd474b8F534a0b
 BASE_TOKEN_ICON_URL=https://assets.coingecko.com/coins/images/279/large/ethereum.png?1698873266
