--- a/.github/workflows/app-deploy-feature-branch.yml
+++ b/.github/workflows/app-deploy-feature-branch.yml
@@ -4,7 +4,7 @@ on: pull_request
 jobs:
   build:
     name: Build and Test App
-    runs-on: ubuntu-latest
+    runs-on: matterlabs-firebase-deployer
     permissions:
       contents: read
       pull-requests: write
@@ -13,7 +13,9 @@ jobs:
       run:
         working-directory: ./packages/app
     outputs:
-      dappUrl: ${{ steps.deploy.outputs.details_url }}
+      dappUrl: ${{ steps.check_channel.outputs.channel_url }}
+    env:
+      CHANNEL_NAME: pr-${{ github.event.number }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -25,6 +27,10 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+
+      - name: Install Firebase CLI and auth
+        run: |
+          npm install -g firebase-tools
 
       - name: Install dependencies
         working-directory: ./
@@ -54,15 +60,32 @@ jobs:
         run: |
           echo "window[\"##runtimeConfig\"] = { appEnvironment: \"staging\" };" > dist/config.js
 
+      - name: Check if Firebase Hosting channel exists
+        working-directory: ./packages/app
+        id: check_channel
+        run: |
+          
+          CHANNEL_URL=$(firebase --project staging-scan-v2 hosting:channel:list --json | jq --arg channel_name "${CHANNEL_NAME}" -r '.result.channels[]|select(.name|contains($channel_name)) | .url')
+          echo $CHANNEL_URL
+          if [ -z "$CHANNEL_URL" ]; then
+            echo "New channel"
+            firebase --project staging-scan-v2 hosting:channel:create $CHANNEL_NAME
+            CHANNEL_URL=$(firebase --project staging-scan-v2 hosting:channel:list --json | jq --arg channel_name "${CHANNEL_NAME}" -r '.result.channels[]|select(.name|contains($channel_name)) | .url')
+          fi          
+          echo "channel_url=${CHANNEL_URL}" >> $GITHUB_OUTPUT
+
       - name: Deploy
-        uses: matter-labs/action-hosting-deploy@main
-        id: deploy
+        working-directory: ./packages/app
+        run: |
+          firebase --project staging-scan-v2 hosting:channel:deploy ${{ env.CHANNEL_NAME }}
+
+      - name: Publish preview url
+        uses: thollander/actions-comment-pull-request@v2
         with:
-          repoToken: "${{ github.token }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_STAGING_SCAN_V2 }}"
-          expires: 7d
-          projectId: staging-scan-v2
-          entryPoint: ./packages/app
+          comment_tag: preview_url
+          message: |
+            Visit the preview URL for this PR: 
+            ${{ steps.check_channel.outputs.channel_url }}
 
   mainnet:
     needs: build
