--- a/.github/workflows/app-deploy-prod.yml
+++ b/.github/workflows/app-deploy-prod.yml
@@ -10,7 +10,7 @@ name: Deploy App to Production
 jobs:
   deploy:
     name: Deploy
-    runs-on: ubuntu-latest
+    runs-on: matterlabs-firebase-deployer
     permissions:
       contents: read
     steps:
@@ -18,6 +18,14 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install Firebase CLI and auth
+        run: |
+          npm install -g firebase-tools
 
       - name: Download Dist package
         uses: dsaltares/fetch-gh-release-asset@master
@@ -48,11 +56,6 @@ jobs:
           unzip storybook-static.zip -d packages/app
 
       - name: Deploy
-        id: deploy
-        uses: matter-labs/action-hosting-deploy@main
-        with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SCAN_V2 }}'
-          projectId: scan-v2
-          channelID: live
-          entryPoint: ./packages/app
+        working-directory: ./packages/app
+        run: |
+          firebase --project scan-v2 deploy
