--- a/packages/app/src/configs/staging.config.json
+++ b/packages/app/src/configs/staging.config.json
@@ -46,7 +46,8 @@
       "name": "mainnet",
       "published": true,
       "rpcUrl": "https://mainnet.era.zksync.io",
-      "tokensMinLiquidity": 0
+      "tokensMinLiquidity": 0,
+      "zkTokenAddress": "0x5A7d6b2F92C77FAD6CCaBd7EE0624E64907Eaf3E"
     }
   ]
 }
