test: debug step - revert these changes

--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -13,15 +13,15 @@ jobs:
       matrix:
         node-version: ['lts/*'] # 18.17.1 or lts/* 
         test-pattern:
-          - accounts.test.ts
+          # - accounts.test.ts
           - addresses.test.ts
-          - batches.test.ts
-          - blocks.test.ts
-          - contracts.test.ts
-          - logs.test.ts
-          - stats.test.ts
-          - tokens.test.ts
-          - transactions.test.ts
+          # - batches.test.ts
+          # - blocks.test.ts
+          # - contracts.test.ts
+          # - logs.test.ts
+          # - stats.test.ts
+          # - tokens.test.ts
+          # - transactions.test.ts
     name: 'API test set: ${{ matrix.test-pattern}} / Node: ${{ matrix.node-version}}'
     steps:
       - name: Checkout with Submodule
