test: debug step 2 - revert these changes

--- a/.github/workflows/app-e2e.yml
+++ b/.github/workflows/app-e2e.yml
@@ -48,15 +48,15 @@ jobs:
       matrix:
         tags: [
                 "@artifactsSet1",
-                "@artifactsSet2",
-                "@artifactsSet3",
-                "@artifactsSet4",
-                "@redirectionSet1",
-                "@redirectionSet2",
-                "@redirectionSet3",
-                "@copying",
-                "@search",
-                "@testnetSmokeSuite"
+                # "@artifactsSet2",
+                # "@artifactsSet3",
+                # "@artifactsSet4",
+                # "@redirectionSet1",
+                # "@redirectionSet2",
+                # "@redirectionSet3",
+                # "@copying",
+                # "@search",
+                # "@testnetSmokeSuite"
               ]
 
     name: '${{ matrix.tags }}'
