--- a/.github/workflows/nodejs-license.yaml
+++ b/.github/workflows/nodejs-license.yaml
@@ -67,4 +67,4 @@ jobs:
 
       - name: Check licenses in ${{ matrix.dir }}
         working-directory: ${{ matrix.dir }}
-        run: npx license-checker --json --onlyAllow="$ALLOWED_LICENSES" --excludePackages "$EXCLUDE_PACKAGES"
+        run: npx license-checker --json --onlyAllow "$ALLOWED_LICENSES" --exclude chai-as-promised --excludePackages "$EXCLUDE_PACKAGES"
