fix: add l2 eth token configuration

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -17,8 +17,16 @@ CONTRACT_VERIFICATION_API_URL=http://127.0.0.1:3070
 NETWORK_NAME=testnet-sepolia
 BASE_TOKEN_SYMBOL=ETH
 BASE_TOKEN_DECIMALS=18
-BASE_TOKEN_L1_ADDRESS=0x8E9C82509488eD471A83824d20Dd474b8F534a0b
+BASE_TOKEN_L1_ADDRESS=0x0000000000000000000000000000000000000000
 BASE_TOKEN_ICON_URL=https://assets.coingecko.com/coins/images/279/large/ethereum.png?1698873266
 BASE_TOKEN_NAME=Ether
 BASE_TOKEN_LIQUIDITY=220000000000
 BASE_TOKEN_USDPRICE=1800
+
+ETH_TOKEN_SYMBOL=ETH
+ETH_TOKEN_DECIMALS=18
+ETH_TOKEN_L2_ADDRESS=0x000000000000000000000000000000000000800A
+ETH_TOKEN_ICON_URL=https://assets.coingecko.com/coins/images/279/large/ethereum.png?1698873266
+ETH_TOKEN_NAME=Ether
+ETH_TOKEN_LIQUIDITY=220000000000
+ETH_TOKEN_USDPRICE=1800
