--- a/packages/api/.env.test
+++ b/packages/api/.env.test
@@ -4,3 +4,11 @@ PORT=3007
 LIMITED_PAGINATION_MAX_ITEMS=15
 API_LIMITED_PAGINATION_MAX_ITEMS=15
 CONTRACT_VERIFICATION_API_URL=http://verification.api
+BASE_TOKEN_SYMBOL=ETH
+BASE_TOKEN_DECIMALS=18
+BASE_TOKEN_L1_ADDRESS=0x0000000000000000000000000000000000000000
+BASE_TOKEN_ICON_URL=https://assets.coingecko.com/coins/images/279/large/ethereum.png?1698873266
+BASE_TOKEN_NAME=Ether
+BASE_TOKEN_LIQUIDITY=220000000000
+BASE_TOKEN_USDPRICE=1800
+ETH_TOKEN_L2_ADDRESS=0x000000000000000000000000000000000000800A
