feat: custom base token support (#273)
# What ❔

Custom base token support.

## Why ❔

Since the Era network now supports custom base tokens, the explorer
should also support them.

## Checklist

<!-- Check your PR fulfills the following items. -->
<!-- For draft PRs check the boxes as you complete them. -->

- [X] PR title corresponds to the body of PR (we generate changelog
entries from PRs).
- [X] Tests for the changes have been added / updated.

---------

Co-authored-by: SantiagoPittella <pittellasantiago@gmail.com>
Co-authored-by: Santiago Pittella <87827390+SantiagoPittella@users.noreply.github.com>
Co-authored-by: ilitteri <ilitteri@fi.uba.ar>

--- a/packages/app/src/configs/production.config.json
+++ b/packages/app/src/configs/production.config.json
@@ -14,7 +14,8 @@
       "maintenance": false,
       "name": "sepolia",
       "published": true,
-      "rpcUrl": "https://sepolia.era.zksync.dev"
+      "rpcUrl": "https://sepolia.era.zksync.dev",
+      "baseTokenAddress": "0x000000000000000000000000000000000000800a"
     },
     {
       "apiUrl": "https://block-explorer-api.mainnet.zksync.io",
@@ -32,7 +33,8 @@
       "published": true,
       "rpcUrl": "https://mainnet.era.zksync.io",
       "tokensMinLiquidity": 0,
-      "zkTokenAddress": "0x5A7d6b2F92C77FAD6CCaBd7EE0624E64907Eaf3E"
+      "zkTokenAddress": "0x5A7d6b2F92C77FAD6CCaBd7EE0624E64907Eaf3E",
+      "baseTokenAddress": "0x000000000000000000000000000000000000800a"
     }
   ]
 }
