test: docker compose update the command

--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Start docker containers
         run: |
-          docker-compose -f "docker-compose.yaml" up -d --build
+          docker compose -f "docker-compose.yaml" up -d --build
       - name: List running containers
         run: docker ps
 
@@ -58,4 +58,4 @@ jobs:
       - name: Stop containers
         if: always()
         run: |
-          docker-compose -f "docker-compose.yaml" down
+          docker compose -f "docker-compose.yaml" down
