--- a/.github/workflows/api-e2e.yml
+++ b/.github/workflows/api-e2e.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Start docker containers
         run: |
-          docker-compose -f "docker-compose.e2e.yaml" up -d --build
+          docker compose -f "docker-compose.e2e.yaml" up -d --build
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -56,4 +56,4 @@ jobs:
 
       - name: Stop containers
         if: always()
-        run: docker-compose -f "docker-compose.e2e.yaml" down
+        run: docker compose -f "docker-compose.e2e.yaml" down
