--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -13,10 +13,11 @@ jobs:
       matrix:
         node-version: ['lts/*'] # 18.17.1 or lts/* 
         test-pattern:
+          - qwe.test.ts
           # - accounts.test.ts
           # - addresses.test.ts
-          - batches.test.ts
-          - blocks.test.ts
+          # - batches.test.ts
+          # - blocks.test.ts
           # - contracts.test.ts
           # - logs.test.ts
           # - stats.test.ts
