test: replace contracts

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ cypress/screenshots/
 tests/e2e/reports/
 **/tests/e2e/artifacts/
 **/playbook/deployments-zk/
+**/playbook/typechain-types/
 **/playbook/artifacts-zk/
 **/playbook/artifacts/
 **/playbook/buffer/
