--- a/packages/app/src/configs/production.config.json
+++ b/packages/app/src/configs/production.config.json
@@ -10,7 +10,7 @@
       "icon": "/images/icons/zksync-arrows.svg",
       "l1ExplorerUrl": "https://sepolia.etherscan.io",
       "l2ChainId": 300,
-      "l2NetworkName": "zkSync Era Sepolia Testnet",
+      "l2NetworkName": "ZKsync Era Sepolia Testnet",
       "maintenance": false,
       "name": "sepolia",
       "published": true,
@@ -27,7 +27,7 @@
       "icon": "/images/icons/zksync-arrows.svg",
       "l1ExplorerUrl": "https://etherscan.io",
       "l2ChainId": 324,
-      "l2NetworkName": "zkSync Era Mainnet",
+      "l2NetworkName": "ZKsync Era Mainnet",
       "maintenance": false,
       "name": "mainnet",
       "published": true,
