--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -16,7 +16,7 @@ jobs:
           - qwe.test.ts
           # - accounts.test.ts
           # - addresses.test.ts
-          # - batches.test.ts
+          - batches.test.ts
           # - blocks.test.ts
           # - contracts.test.ts
           # - logs.test.ts
