--- a/.github/workflows/nodejs-license.yaml
+++ b/.github/workflows/nodejs-license.yaml
@@ -6,12 +6,14 @@ env:
   ALLOWED_LICENSES: >
     MIT;
     0BSD;
+    BSD;
     BSD-2-Clause;
     BSD-3-Clause;
     ISC;
     Apache-2.0;
     Apache 2.0;
     MPL-2.0;
+    LGPL-3.0;
     CC0-1.0;
     CC-BY-3.0;
     CC-BY-4.0;
@@ -22,6 +24,8 @@ env:
     UNLICENSED;
     BlueOak-1.0.0;
     WTFPL;
+    PSF;
+    Custom: https://github.com/dominictarr/event-stream;
   # gitconfiglocal@1.0.0 - BSD-3-Clause
   # glob-to-regexp@0.3.0 - BSD-2-Clause
   # map-stream@0.1.0 - MIT
