--- a/.gitignore
+++ b/.gitignore
@@ -63,12 +63,7 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # Allure
-#Allure results and artifacts
-**/allure-results/
-**/e2e/artifacts/
-**/playbook/artifacts*
-**/playbook/cache*
-**/buffer/*.txt
+**allure-results/
 
 # App hyperchain config
 hyperchain.config.json
