test: fix e2e run after rebase

--- a/.github/workflows/app-e2e.yml
+++ b/.github/workflows/app-e2e.yml
@@ -54,7 +54,7 @@ jobs:
                 "@redirectionSet1",
                 "@redirectionSet2",
                 "@redirectionSet3",
-                "@copying"
+                "@copying",
                 "@search",
                 "@testnetSmokeSuite"
               ]
