--- a/packages/app/public/vercel.json
+++ b/packages/app/public/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "redirects": [{ "source": "/a", "destination": "/", "permanent": false }]
 }
