--- a/packages/app/vercel.json
+++ b/packages/app/vercel.json
@@ -1,3 +1,3 @@
 {
-  "redirects": [{ "source": "/(.*)", "destination": "/", "permanent": false }]
+  "redirects": [{ "source": "/*", "destination": "/index.html", "permanent": false }]
 }
