feat(chore): face palm

--- a/packages/app/vercel.json
+++ b/packages/app/vercel.json
@@ -1,3 +1,8 @@
 {
-  "redirects": [{ "source": "/[^.]+", "destination": "/index.html", "permanent": false }]
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
