--- a/packages/data-fetcher/package.json
+++ b/packages/data-fetcher/package.json
@@ -37,7 +37,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "winston": "^3.8.2",
-    "zksync-web3": "0.15.4"
+    "zksync-web3": "file:../../../zksync2-js-interop"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
