--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -52,7 +52,7 @@
     "typeorm": "^0.3.15",
     "winston": "^3.8.2",
     "yargs": "^17.7.2",
-    "zksync-web3": "0.15.4"
+    "zksync-web3": "file:../../../zksync2-js-interop"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
