fix base token (#12)
* feat: add packages/api/.env to override BASE_TOKEN_SYMBOL and BASE_TOKEN_ICON_URL

* fix: change address and name of testnet magic

--- a/packages/api/.env
+++ b/packages/api/.env
@@ -17,9 +17,10 @@
 
 BASE_TOKEN_SYMBOL=MAGIC
 BASE_TOKEN_DECIMALS=18
-BASE_TOKEN_L1_ADDRESS=0xb0c7a3ba49c7a6eaba6cd4a96c55a1391070ac9a
+BASE_TOKEN_L1_ADDRESS=0x013cb2854daad8203c6686682f5d876e5d3de4a2
 BASE_TOKEN_ICON_URL=https://assets.coingecko.com/coins/images/18623/standard/magic.png?1696518095
-BASE_TOKEN_NAME=Treasure
+BASE_TOKEN_NAME="Testnet Magic"
+
 
 #ETH_TOKEN_SYMBOL=ETH
 #ETH_TOKEN_DECIMALS=18
